update stock database
