# backend/src/routes/reportRoutes.js
@@ -6,4 +6,8 @@ router.get("/debt", reportController.getDebtReport);
 
 router.get("/all-debt", reportController.getAllDebtReport);
 
+router.get("/stock", reportController.getStockReport);
+
+router.get("/all-stock", reportController.getAllStockReport);
+
 module.exports = router;
